<resources>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="popup_title">Are you sure?</string>
    <string name="storage_saf_not_found_message">This device does not support the StorageAccessFramework file picker. Please manually copy uncompressed ROM files into %1$s and hit Rescan.</string>
    <string name="notification_channel_name">All notifications</string>
    <string name="library_index_notification_title">ROMs scanning in progress</string>
    <string name="library_index_notification_message">This can take up to a few minutes</string>
    <string name="save_sync_notification_title">Cloud save Sync in progress</string>
    <string name="save_sync_notification_message">This can take up to a few minutes</string>
    <string name="game_running_notification_title">%1$s is running</string>
    <string name="game_running_notification_title_alternative">Game is running</string>
    <string name="game_running_notification_message">Make sure to save your progress</string>
    <string name="bottom_games">Games</string>
    <string name="bottom_systems">Systems</string>
    <string name="bottom_netplay">Netplay</string>
    <string name="bottom_settings">Settings</string>
    <string name="top_info">Info</string>
    <string name="top_search">Search</string>
    <string name="top_account">Account</string>
    <string name="title_home">Games</string>
    <string name="title_all_games">All Games</string>
    <string name="title_all_favorites">All Favorites</string>
    <string name="title_systems">Systems</string>
    <string name="title_system_games">System Games</string>
    <string name="title_netplay">Netplay</string>
    <string name="title_settings">Settings</string>
    <string name="title_gamepad">GamePad</string>
    <string name="title_bios">BIOS</string>
    <string name="title_advanced">Advanced</string>
    <string name="title_save_sync">Save Sync</string>
    <string name="title_change_cores">Change Cores</string>
    <string name="title_info">Info</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>
    <string name="search_empty_view_message">No recent searches found</string>
    <string name="account_empty_view_message">Account not yet implemented</string>
    <string name="home_empty_title">Select ROMs directory</string>
    <string name="home_empty_message">Emulair needs to scan a directory containing ROM files.\nThis might take up to a few minutes.</string>
    <string name="home_empty_action">Select Directory</string>
    <string name="home_notice_message">Play any game to make it appear in your \"Recents\" section.\n\nClick on the heart icon to add a game to the \"Favorites\" section.</string>
    <string name="section_jump">Jump back in</string>
    <string name="section_recent">Recents</string>
    <string name="section_favorites">Favorites</string>
    <string name="section_all_games">All games</string>
    <string name="section_action_see_all">see all</string>
    <string name="game_context_menu_option_resume">Resume</string>
    <string name="game_context_menu_option_restart">Restart</string>
    <string name="game_context_menu_option_add_to_favorites">Add to favorites</string>
    <string name="game_context_menu_option_remove_from_favorites">Remove from favorites</string>
    <string name="game_loading_preparing_game">Preparing game…</string>
    <string name="game_toast_settings_button_using_gamepad">Gamepad detected. Access settings menu with %1$s.</string>
    <string name="game_toast_interactor_busy">Wait for the pending operations to complete</string>
    <string name="game_toast_load_state_failed">Cannot load this state</string>
    <string name="game_toast_incompatible_state">This save state is not compatible with the current core version. Please load the latest in-game save or use a previous Emulair version.</string>
    <string name="game_loader_error_gl_incompatible">This Core requires an OpenGL ES version which is not supported by your device.</string>
    <string name="game_loader_error_generic">Something bad happened. Try the following:\n
        \n\u2022 Disable "Save state on correct quit" and re-run the game
        \n\u2022 Go into Android settings and clear the app cache
        \n\u2022 Go into Emulair settings and perform a Factory Reset
        \n\n If none of the above works, it might be possible that this game/core is not supported by this device.
    </string>
    <string name="game_loader_error_load_game">Something bad happened while loading your game. Make sure the ROM is supported by Emulair and rescan your games.</string>
    <string name="game_loader_error_save">Something bad happened with your save file. If the issue persists, try disabling auto-save.</string>
    <string name="game_loader_error_unsupported_architecture">This Core is not supported by your device.</string>
    <string name="game_loader_error_missing_bios">It looks like you\'re missing the required BIOS, put them in your ROMs directory and rescan. Required files: %1$s</string>
    <string name="title_pause_menu">GAME PAUSED</string>
    <string name="title_core_options">Core Options</string>
    <string name="title_save">Save State</string>
    <string name="title_load">Load State</string>
    <string name="pause_menu_save">Save state</string>
    <string name="pause_menu_load">Load state</string>
    <string name="pause_menu_state">State %1$s</string>
    <string name="pause_menu_quit">Quit game</string>
    <string name="pause_menu_quit_prompt">You will lose any unsaved progress (unless you turned on \"Save state on correct quit\").</string>
    <string name="pause_menu_restart">Restart emulator</string>
    <string name="pause_menu_restart_prompt">Save states and in-game saved progress will be kept. Useful when a game doesn\'t natively allow you to return to the main menu.</string>
    <string name="pause_menu_mute_audio">Mute</string>
    <string name="pause_menu_fast_forward">Fast-forward</string>
    <string name="pause_menu_change_disk_button">Change disk</string>
    <string name="pause_menu_change_disk_option">Disk %1$s</string>
    <string name="pause_menu_edit_touch_controls">Edit controls</string>
    <string name="pause_menu_core_options">Core options</string>
    <string name="pause_menu_exit">Exit menu</string>
    <string name="core_options_controllers_controller">Controller type</string>
    <string name="core_options_controllers_controller_alt">Controller %1$s type</string>
    <string name="systems_empty_view_message">No systems found</string>
    <string name="systems_subtitle">%1$s games</string>
    <string name="systems_subtitle_alt">1 game</string>
    <string name="settings_category_roms">ROMs</string>
    <string name="settings_roms_directory_title">Directory</string>
    <string name="settings_roms_directory_description">None</string>
    <string name="settings_roms_rescan_title">Rescan</string>
    <string name="settings_roms_stop_title">Stop</string>
    <string name="settings_category_general">General</string>
    <string name="settings_general_app_theme_title">App theme</string>
    <string name="settings_general_monet_title">Monet engine theming</string>
    <string name="settings_general_monet_description">Use colors from your wallpaper</string>
    <string name="settings_general_autorotate_title">In-game screen autorotation</string>
    <string name="settings_general_autorotate_description">Follow device orientation regardless of orientation lock</string>
    <string name="settings_general_display_filter_title">Display filter</string>
    <string name="settings_general_display_filter_auto_option">Auto</string>
    <string name="settings_general_display_filter_sharp_option">Sharp</string>
    <string name="settings_general_display_filter_smooth_option">Smooth</string>
    <string name="settings_general_display_filter_crt_option">CRT</string>
    <string name="settings_general_display_filter_lcd_option">LCD</string>
    <string name="settings_general_display_filter_hd_option">HD</string>
    <string name="settings_general_enable_autosave_onquit_title">Save state on correct quit</string>
    <string name="settings_general_enable_autosave_onquit_description">By pressing \"Quit game\" in the pause menu on consoles where state saving is available</string>
    <string name="settings_category_input">Input</string>
    <string name="settings_input_vibration_title">Vibrate on touch</string>
    <string name="settings_input_vibration_none_option">None</string>
    <string name="settings_input_vibration_press_option">Press</string>
    <string name="settings_input_vibration_press_release_option">Press &amp; release</string>
    <string name="settings_input_gamepad_title">External devices</string>
    <string name="settings_input_gamepad_description">Configure external gamepads and keyboards</string>
    <string name="gamepad_category_devices">Enabled devices</string>
    <string name="gamepad_devices_retropad_button_title">RetroPad %1$s</string>
    <string name="gamepad_category_general">General</string>
    <string name="gamepad_general_reset_bindings_title">Reset bindings</string>
    <string name="gamepad_retropad_game_menu_title">Menu</string>
    <string name="gamepad_retropad_binding_popup_title">Associate \"RetroPad %1$s\"</string>
    <string name="gamepad_retropad_binding_popup_description">Press a button on your \"%1$s\"</string>
    <string name="settings_category_misc">Miscellaneous</string>
    <string name="settings_misc_save_sync_title">Cloud saves</string>
    <string name="settings_misc_save_sync_description">Back up and sync your saves on the cloud</string>
    <string name="settings_misc_change_cores_title">Change cores</string>
    <string name="settings_misc_change_cores_description">Select which core is associated to a system</string>
    <string name="settings_misc_bios_title">BIOS</string>
    <string name="settings_misc_bios_description">Display detected and supported BIOS files</string>
    <string name="settings_misc_advanced_title">Advanced settings</string>
    <string name="settings_misc_advanced_description">Display advanced settings</string>
    <string name="settings_title_join_stick_dpad">D-Pad Emulation</string>
    <string name="settings_summary_join_stick_dpad">Use joystick as D-Pad for systems that do not use a joystick.</string>
    <string name="save_sync_category_gdrive">Sign in to Google</string>
    <string name="save_sync_gdrive_configure_title">Configure %1$s</string>
    <string name="save_sync_category_synchronization">Synchronization</string>
    <string name="save_sync_synchronization_saves_title">Sync in-game saves</string>
    <string name="save_sync_synchronization_saves_description">%1$s on device</string>
    <string name="save_sync_synchronization_states_title">Sync states</string>
    <string name="save_sync_synchronization_states_description">More convenient, but heavier and less reliable. Choose which cores/systems you want to sync</string>
    <string name="save_sync_synchronization_auto_title">Auto sync</string>
    <string name="save_sync_synchronization_auto_description">Automatically perform a sync before and after a game session when connected to Wi-Fi</string>
    <string name="save_sync_synchronization_refresh_title">Manual sync</string>
    <string name="save_sync_synchronization_refresh_description">Perform a manual sync now\n%1$s</string>
    <string name="bios_category_detected">Detected</string>
    <string name="bios_category_not_detected">Supported</string>
    <string name="advanced_input_global_rumble_title">Rumble</string>
    <string name="advanced_input_global_rumble_description">In supported games and controllers</string>
    <string name="advanced_input_device_rumble_title">Device fake rumble</string>
    <string name="advanced_input_device_rumble_description">When no controller is connected, vibrate the device instead</string>
</resources>