<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/home_empty_title"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_spacing"
            android:paddingStart="@dimen/grid_spacing"
            android:paddingEnd="@dimen/grid_spacing"
            android:text="@string/home_empty_message"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceCaption" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_spacing"
            android:text="@string/home_empty_action"
            app:cornerRadius="40dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>
